--- a/to-do/index.html
+++ b/to-do/index.html
@@ -18,23 +18,21 @@
         <h1>Mike's To Do List</h1>
     </header>
     <form>
-        <input type="text" class="todo-input">
-        <button class="todo-button" type="submit">
-            <i class="fas fa-plus-square"></i>
-        </button>
+        <input type="text" class="todo-input" />
+      <button class="todo-button" type="submit">
+        <i class="fas fa-plus-square"></i>
+      </button>
+      <div class="select">
+        <select name="todos" class="filter-todo">
+          <option value="all">All</option>
+          <option value="completed">Completed</option>
+          <option value="uncompleted">Uncompleted</option>
+        </select>
+      </div>
     </form>
     <div class="todo-container">
-        <ul class="todo-list">
-        </ul>
+      <ul class="todo-list"></ul>
     </div>
-
-    <!-- <div class="todo">
-        <li></li>
-        <button></button>
-        <button></button>
-
-    </div> -->
-
 <script src="./app.js"></script>
 
 
